Search bar in Header completed

--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="recipe search engine with over 1,000,000 recipies">
     <meta name="author" content="Matt Denune">
-    
+    <!--Insert links here -->
     <title>MyMenu // Food recipies you'll love</title>
 </head>
 
 <body>
+    <header class="header">
+        <img src="img/logo.png" alt="Logo" class="header__logo">
+        <form class="search">
+            <input type="text" class="search__field" placeholder="Food recipies you'll love"?>
+            <button class="btn search__btn">
+                <svg class="search__icon">
+                    <use href="img/icons.svg#icon-magnifying-glass"></use>
+                </svg>
+                <span>Search</span>
+            </button>
+        </form>
 
+    </header>
 </body>
 
 </html>
