--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="recipe search engine with over 1,000,000 recipies">
     <meta name="author" content="Matt Denune">
-    <!--Insert links here -->
+    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,600,700" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
     <title>MyMenu // Food recipies you'll love</title>
 </head>
 
@@ -14,7 +16,7 @@
     <header class="header">
         <img src="img/logo.png" alt="Logo" class="header__logo">
         <form class="search">
-            <input type="text" class="search__field" placeholder="Food recipies you'll love"?>
+            <input type="text" class="search__field" placeholder="Food recipies you'll love...">
             <button class="btn search__btn">
                 <svg class="search__icon">
                     <use href="img/icons.svg#icon-magnifying-glass"></use>
@@ -22,6 +24,28 @@
                 <span>Search</span>
             </button>
         </form>
+        <div class="likes">
+            <div class="likes__field">
+                <svg class="likes__icon">
+                    <use href="img/icons.svg#icon-heart"></use>
+                </svg>
+            </div>
+            <div class="likes__panel">
+                <ul class="likes__list">
+                    <li>
+                        <a class="likes__link" href="#23456">
+                            <figure class="likes__fig">
+                                <img src="img/test-1.jpg" alt="Test">
+                            </figure>
+                            <div class="likes__data">
+                                <h4 class="likes__name">Vegetabel bowl...</h4>
+                                <p class="likes__author">The healthy cook</p>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
 
     </header>
 </body>
