updated recipe details div

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header class="header">
-        <img src="img/logo.png" alt="Logo" class="header__logo">
+        <img src="../dist/img/logo.png" alt="Logo" class="header__logo">
         <form class="search">
             <input type="text" class="search__field" placeholder="Food recipies you'll love...">
             <button class="btn search__btn">
@@ -36,7 +36,7 @@
                     <li>
                         <a class="likes__link" href="#23456">
                             <figure class="likes__fig">
-                                <img src="img/test-1.jpg" alt="Test">
+                                <img src="../dist/img/test-1.jpg" alt="Test">
                             </figure>
                             <div class="likes__data">
                                 <h4 class="likes__name">Vegetabel bowl...</h4>
@@ -57,7 +57,7 @@
             <li>
                 <a class="results__link results__link--active" href="#23456">
                     <figure class="results__fig">
-                        <img src="img/test-1.jpg" alt="Test">
+                        <img src="../dist/img/test-1.jpg" alt="Test">
                     </figure>
                     <div class="results__name">
                         <h4 class="results__name">Vegetable bowl...</h4>
@@ -69,7 +69,7 @@
             <li>
                 <a class="results__link" href="#23456">
                     <figure class="results__fig">
-                        <img src="img/test-2.png" alt="Test">
+                        <img src="../dist/img/test-2.jpg" alt="Test">
                     </figure>
                     <div class="results__data">
                         <h4 class="results__name">Creamy potato soup...</h4>
@@ -81,7 +81,7 @@
             <li>
                 <a class="results__link" href="#23456">
                     <figure class="results__fig">
-                        <img src="img/test-3.png" alt="Test">
+                        <img src="../dist/img/test-3.jpg" alt="Test">
                     </figure>
                     <div class="results__data">
                         <h4 class="results__name">Hearty kale salad...</h4>
@@ -93,7 +93,7 @@
             <li>
                 <a class="results__link" href="#23456">
                     <figure class="results__fig">
-                        <img src="img/test-4.png" alt="Test">
+                        <img src="../dist/img/test-4.jpg" alt="Test">
                     </figure>
                     <div class="results__data">
                         <h4 class="results__name">Amazing Thai noodles...</h4>
@@ -105,7 +105,7 @@
             <li>
                 <a class="results__link" href="#23456">
                     <figure class="results__fig">
-                        <img src="img/test-5.png" alt="Test">
+                        <img src="../dist/img/test-5.jpg" alt="Test">
                     </figure>
                     <div class="results__data">
                         <h4 class="results__name">Morning toast with...</h4>
@@ -117,7 +117,7 @@
             <li>
                 <a class="results__link" href="#23456">
                     <figure class="results__fig">
-                        <img src="img/test-6.png" alt="Test">
+                        <img src="../dist/img/test-6.jpg" alt="Test">
                     </figure>
                     <div class="results__data">
                         <h4 class="results__name">Upside down cake...</h4>
@@ -129,7 +129,7 @@
             <li>
                 <a class="results__link" href="#23456">
                     <figure class="results__fig">
-                        <img src="img/test-7.png" alt="Test">
+                        <img src="../dist/img/test-7.jpg" alt="Test">
                     </figure>
                     <div class="results__data">
                         <h4 class="results__name">Spaghetti nest of...</h4>
@@ -141,7 +141,7 @@
             <li>
                 <a class="results__link" href="#23456">
                     <figure class="results__fig">
-                        <img src="img/test-8.png" alt="Test">
+                        <img src="../dist/img/test-8.jpg" alt="Test">
                     </figure>
                     <div class="results__data">
                         <h4 class="results__name">Pizza on a stick...</h4>
@@ -153,7 +153,7 @@
             <li>
                 <a class="results__link" href="#23456">
                     <figure class="results__fig">
-                        <img src="img/test-9.png" alt="Test">
+                        <img src="../dist/img/test-9.jpg" alt="Test">
                     </figure>
                     <div class="results__data">
                         <h4 class="results__name">Healthy ice cream...</h4>
@@ -165,7 +165,7 @@
             <li>
                 <a class="results__link" href="#23456">
                     <figure class="results__fig">
-                        <img src="img/test-10.png" alt="Test">
+                        <img src="../dist/img/test-10.jpg" alt="Test">
                     </figure>
                     <div class="results__data">
                         <h4 class="results__name">Kids Cheerios</h4>
