--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
     <meta name="description" content="recipe search engine with over 1,000,000 recipies">
     <meta name="author" content="Matt Denune">
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,600,700" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="../dist/css/style.css">
+    <link rel="shortcut icon" href="../dist/img/favicon.png" type="image/x-icon">
     <title>MyMenu // Food recipies you'll love</title>
 </head>
 
@@ -20,7 +20,7 @@
                 <input type="text" class="search__field" placeholder="Food recipies you'll love...">
                 <button class="btn search__btn">
                     <svg class="search__icon">
-                        <use href="img/icons.svg#icon-magnifying-glass"></use>
+                        <use href="../dist/img/icons.svg#icon-magnifying-glass"></use>
                     </svg>
                     <span>Search</span>
                 </button>
