updating file structure to deploy to Surge.sh

--- a/index.html
+++ b/index.html
@@ -429,6 +429,6 @@
 
 
     <script type="text/javascript" src="./dist/js/bundle.js"></script>
-<script type="text/javascript" src="js/bundle.js"></script></body>
+</body>
 
 </html>
