--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="recipe search engine with over 1,000,000 recipies">
     <meta name="author" content="Matt Denune">
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,600,700" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../dist/css/style.css">
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
     <title>MyMenu // Food recipies you'll love</title>
 </head>
@@ -428,7 +428,7 @@
     </div>
 
 
-    <script type="text/javascript" src="js/bundle.js"></script>
+    <!-- <script type="text/javascript" src="js/bundle.js"></script> -->
 </body>
 
 </html>
